// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar renders it with showAccount 1`] = `
<nav
  className="navbar navbar-expand navbar-light"
>
  <div
    className="sc-jSFjdj jmcpqm container"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    />
    <div
      className="sc-gKAaRy kWJcFL navbar-nav"
      onKeyDown={[Function]}
    >
      <button
        className="btn btn-outline-secondary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Connect Wallet
      </button>
    </div>
  </div>
</nav>
`;

exports[`NavBar renders it with showBrandIcon 1`] = `
<nav
  className="navbar navbar-expand navbar-light"
>
  <div
    className="sc-jSFjdj jmcpqm container"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="KappaSigmaMu Logo"
          src="kappa-sigma-mu-logo.svg"
          width={90}
        />
      </a>
    </div>
    <div
      className="sc-gKAaRy kWJcFL navbar-nav"
      onKeyDown={[Function]}
    />
  </div>
</nav>
`;

exports[`NavBar renders it with showGalleryButton 1`] = `
<nav
  className="navbar navbar-expand navbar-light"
>
  <div
    className="sc-jSFjdj jmcpqm container"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    />
    <div
      className="sc-gKAaRy kWJcFL navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="nav-link"
        data-rr-ui-event-key={null}
        disabled={false}
        href="/home/bids"
        onClick={[Function]}
      >
        Gallery
      </a>
    </div>
  </div>
</nav>
`;

exports[`NavBar renders it with showSocialIcons 1`] = `
<nav
  className="navbar navbar-expand navbar-light"
>
  <div
    className="sc-jSFjdj jmcpqm container"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    />
    <div
      className="sc-gKAaRy kWJcFL navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="sc-dlnjwi"
        href="https://discord.gg/9AWjTf8wSk"
        rel="noreferrer"
        target="_blank"
      >
        <img
          alt="Discord Logo"
          src="discord-logo.svg"
        />
      </a>
       
      <a
        className="sc-dlnjwi"
        href="https://matrix.to/#/!BUmiAAnAYSRGarqwOt:matrix.parity.io?via=matrix.parity.io"
        rel="noreferrer"
        target="_blank"
      >
        <img
          alt="Element Logo"
          src="element-logo.svg"
        />
      </a>
       
      <a
        className="sc-dlnjwi"
        href="https://twitter.com/network"
        rel="noreferrer"
        target="_blank"
      >
        <img
          alt="Twitter Logo"
          src="twitter-logo.svg"
          style={
            Object {
              "color": "red",
            }
          }
        />
      </a>
    </div>
  </div>
</nav>
`;
